welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: identifier expected but 'new' found.
  var T:new Array[Int](20)
        ^